# smartNVR

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Application/: nvrmain.cpp  nvrmain.hpp
Common/: FileNameGenerator.hpp  iToString.hpp
Domains/: camera.cpp  camera.hpp  frame.cpp  frame.hpp  framecollection.cpp  framecollection.hpp  iframes.hpp
Entities/: camera.cpp  camera.hpp  camerafeatures.cpp  camerafeatures.hpp  filelocation.hpp  frame.cpp  frame.hpp  framecollection.cpp  framecollection.hpp  framesaver.cpp  framesaver.hpp  icamera.hpp  nvrconfig.cpp  nvrconfig.hpp  videomaker.cpp  videomaker.hpp
_old_code/smartNVR.CameraManager/Application/: CameraConfiguration.cpp  CameraConfiguration.hpp  CameraManager.cpp  CameraManager.hpp
_old_code/smartNVR.CameraManager/Domain/: iCameraManager.hpp
_old_code/smartNVR.Interfaces/: icapturefeatures.hpp  iframes.hpp
smartNVR.Application/: camera.cpp  camera.hpp  framesaver.cpp  framesaver.hpp  nvrmain.cpp  nvrmain.hpp  videomaker.cpp  videomaker.hpp
smartNVR.Domain/: framecollection.cpp  framecollection.hpp
smartNVR.Infrastructure/: nvrconfig.cpp
smartNVR.backend/: main.cpp
smartNVR.backend/Common/: FileLocation.hpp  FileNameGenerator.hpp  iCamera.hpp  iConfiguration.hpp
smartNVR.backend/smartNVR.Application/: camera.hpp  nvrmain.cpp
smartNVR.backend/smartNVR.Domain/: camerafeatures.cpp
smartNVR.backend/smartNVR.Infrastructure/: nvrconfig.hpp
